--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,5 +1,8 @@
-<ce-global-loader>
-	<tui-root>
-		<router-outlet></router-outlet>
+<ce-global-loader class="h-full">
+	<tui-root class="h-full">
+		<div class="flex flex-col h-full">
+			<ce-app-header></ce-app-header>
+			<router-outlet></router-outlet>
+		</div>
 	</tui-root>
 </ce-global-loader>
