--- a/src/modules/cart/cart.style.less
+++ b/src/modules/cart/cart.style.less
@@ -1,3 +1,11 @@
 :host {
 	display: block;
+	flex: 1 1 auto;
+	border-radius: 40px 40px 0 0;
+	padding-top: 40px;
+}
+
+.cart-border {
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
